--- a/uigdpro/templates/generator.html
+++ b/uigdpro/templates/generator.html
@@ -414,13 +414,13 @@ color: #0095EA;
         {% endif %}
       </div>
 
-      <div class="mb-3">
-        <label for="{{ form.custom_dart_path.id_for_label }}" class="form-label">目标路径</label>
-        {{ form.custom_dart_target_path }}
-        {% if form.custom_dart_target_path.errors %}
-          <div class="text-danger small">{{ form.custom_dart_target_path.errors|join:", " }}</div>
-        {% endif %}
-      </div>
+    <div class="mb-3">
+      <label for="{{ form.custom_dart_path.id_for_label }}" class="form-label">目标路径</label>
+      {{ form.custom_dart_path }}
+      {% if form.custom_dart_path.errors %}
+        <div class="text-danger small">{{ form.custom_dart_path.errors|join:", " }}</div>
+      {% endif %}
+    </div>
 
       <div class="mb-3">
         <label for="{{ form.theme.id_for_label }}" class="form-label">主题：</label>
