--- a/uigdpro/templates/generator.html
+++ b/uigdpro/templates/generator.html
@@ -220,7 +220,7 @@ color: #0095EA;
 <body>
 <h1><i class="fas fa-cogs"></i> 客户端构建器</h1>
 
-<form id="myForm" action="/generator/" method="post" enctype="multipart/form-data">
+<form id="myForm" action="/" method="post" enctype="multipart/form-data">
 {% csrf_token %}
 
   <!-- 保存/加载配置 -->
