--- a/uigdpro/templates/generator.html
+++ b/uigdpro/templates/generator.html
@@ -406,6 +406,16 @@ color: #0095EA;
           {{ form.logofile }}
           <div id="logo-preview" class="mt-2"></div>
         </div>
+      <div>
+        <label>上传文件（可选）：</label><br>
+        {{ form.custom_file }}
+      </div>
+      
+      <div>
+        <label>目标文件：</label><br>
+        {{ form.custom_target_path }}
+      </div>
+        
       </div>
 
      
